Add workflow for building native deb and jar file

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
         path: composeApp/build/outputs/apk/release/*.apk
         retention-days: 30
 
-  build-desktop:
+  build-desktop-windows:
     runs-on: windows-latest
     
     steps:
@@ -59,3 +59,43 @@ jobs:
         name: desktop-windows
         path: composeApp/build/compose/binaries/main-release/**/*
         retention-days: 30
+
+  build-desktop-linux:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+      
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: gradle
+        
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+
+     - name: Build Desktop package
+      run: ./gradlew :composeApp:packageReleaseDistributionForCurrentOS
+      shell: bash
+  
+    - name: Build JAR package
+      run: ./gradlew :composeApp:packageUberJarForCurrentOS
+      shell: bash
+
+    - name: Upload Desktop artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: desktop-linux
+        path: composeApp/build/compose/binaries/main-release/**/*
+        retention-days: 30
+
+    - name: Upload Jar artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: desktop-jar
+        path: composeApp/build/compose/jars/*
+        retention-days: 30
+
