--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: Build
 
 on:
   push:
-    branches: [ master, main ]
+    branches: [ master ]
   pull_request:
-    branches: [ master, main ]
+    branches: [ master ]
   workflow_dispatch:
 
 jobs:
@@ -92,7 +92,7 @@ jobs:
         path: composeApp/build/compose/binaries/main-release/**/*
         retention-days: 30
 
-    - name: Upload Jar artifacts
+    - name: Upload JAR artifacts
       uses: actions/upload-artifact@v4
       with:
         name: desktop-jar
